--- a/pom.xml
+++ b/pom.xml
@@ -37,27 +37,10 @@
       <scope>test</scope>
     </dependency>
 
-    <!--<dependency>
-      <groupId>commons-httpclient</groupId>
-      <artifactId>commons-httpclient</artifactId>
-      <version>3.1</version>
-    </dependency>-->
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
       <version>4.5.2</version>
-    </dependency>
-
-    <dependency>
-      <groupId>cn.jpush.api</groupId>
-      <artifactId>jpush-client</artifactId>
-      <version>3.2.9</version>
-    </dependency>
-
-    <dependency>
-      <groupId>com.alibaba</groupId>
-      <artifactId>fastjson</artifactId>
-      <version>1.2.47</version>
     </dependency>
 
     <dependency>
@@ -70,6 +53,19 @@
       <artifactId>bcprov-jdk15on</artifactId>
       <version>1.52</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.2</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.47</version>
+    </dependency>
+
   </dependencies>
 
   <build>
